--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
-    "dotenv": "^16.4.5"
+    "@pythnetwork/price-service-client": "^1.9.0",
+    "dotenv": "^16.4.5",
+    "juno-network": "^0.18.1",
+    "osmojs": "^16.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
