--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PHMN_stats",
+  "name": "phmn_stats",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/IIIyJIeP/PHMN_stats.git",
@@ -10,7 +10,6 @@
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
     "dev": "nodemon --inspect ./dist/index.js",
-    "experiment": "ts-node ./src/experiment.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
