add google sheet

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ INFLUXDB_URL = "http://...:8086"
 INFLUXDB_ORG = "" # Organisation name
 PHMN_STATS_BUCKET = "..." # Bucket name for PHMN stats
 PHMN_ADDRESSES_BUCKET = "..." # Bucket name for PHMN balances
+
+# Google Sheets Auth (See README)
+G_SHEETS_CREDS = '...'
+G_SHEETS_ID = "..."
