--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@influxdata/influxdb-client": "^1.33.2",
     "@pythnetwork/price-service-client": "^1.9.0",
     "dotenv": "^16.4.5",
+    "googleapis": "^139.0.0",
     "juno-network": "^0.18.1",
     "osmojs": "^16.14.0"
   },
