--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "googleapis": "^139.0.0",
     "juno-network": "^0.18.1",
     "osmojs": "^16.14.0",
+    "papaparse": "^5.5.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
+    "@types/papaparse": "^5.3.15",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
