astroport and btc pool osmosis

--- a/package.json
+++ b/package.json
@@ -29,5 +29,16 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "resolutions": {
+    "@cosmjs/stargate": "0.32.4",
+    "@cosmjs/cosmwasm-stargate": "0.32.4",
+    "@cosmjs/tendermint-rpc": "0.32.4",
+    "@cosmjs/proto-signing": "0.32.4",
+    "@cosmjs/encoding": "0.32.4",
+    "@cosmjs/math": "0.32.4",
+    "@cosmjs/amino": "0.32.4",
+    "@cosmjs/utils": "0.32.4",
+    "cosmjs-types": "0.9.0"
+  }
 }
